--- a/mesto-react/src/index.css
+++ b/mesto-react/src/index.css
@@ -2,6 +2,7 @@
 @import url(./vendors/fonts/fonts.css);
 @import url(./blocks/body/body.css);
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/header/__logo-container/header__logo-container.css);
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/profile/profile.css);
@@ -55,3 +56,19 @@
 @import url(./blocks/popup/__button-clear/_confirm-deletion/popup__button-close_confirm-deletion.css);
 @import url(./blocks/popup/__image-title/popup__image-title.css);
 @import url(./blocks/popup/_image/popup_image.css);
+@import url(./blocks/popup/__image-info/popup__image-info.css);
+@import url(./blocks/popup/__heading-info/popup__heading-info.css);
+
+@import url(./blocks/registr/__form/registr__form.css);
+@import url(./blocks/registr/__heading/registr__heading.css);
+@import url(./blocks/registr/__item/registr__item.css);
+@import url(./blocks/registr/__item/_type_name/registr__item_type_name.css);
+@import url(./blocks/registr/__item/_type_password/registr__item_type_password.css);
+@import url(./blocks/registr/__button/registr__button.css);
+@import url(./blocks/header/__textLink/header__textLink.css);
+@import url(./blocks/login/__form/login__form.css);
+@import url(./blocks/login/__heading/login__heading.css);
+@import url(./blocks/login/__button/login__button.css);
+@import url(./blocks/login/__item/login__item.css);
+@import url(./blocks/login/__item/_type_name/login__item_type_name.css);
+@import url(./blocks/login/__item/_type_password/login__item_type_password.css);
